2008-08-07  Christopher Bratusek <nano-master@gmx.de>
	* themes/Makefile.in: install Elberg-tabbed 

2008-08-07  Scott Scriven <sawfish@toykeeper.net>
	* themes/Elberg-tabbed/: added Elberg-tabbed theme

2008-08-06  Guillermo S. Romero <gsromero@svn.gnome.org>
	* lisp/sawfish/wm/commands/x-cycle.jl
	* man/sawmill.texi: added after-cycle-step-hook and related docs,
	originally by Teika kazura. Changed some white space in the
	process.

2008-08-05  Timo Korvola <tkorvola@svn.gnome.org>
	* src/windows.c, man/sawmill.texi: Call property
	handlers in window-remprop. Make window-plist return
	the list itself not a copy

2008-08-05  Christopher Bratusek <nano-master@gmx.de>
	* themes/Makefile.in: actually install get-S-tabbed

	* themes/mxflat
	* themes/Makefile.in: add the mxflat theme

2008-08-05  Scott Scriven <sawfish@toykeeper.net>
	* themes/get-S-tabbed/: added get-S-tabbed theme

2008-08-05  Christopher Bratusek <nano-master@gmx.de>
	* configure.in
	* po/POTFILES.in
	* capplet/*
	* Makefile.in
	* sawfish.spec.in: removed the capplet

2008-08-04  Guillermo S. Romero <gsromero@svn.gnome.org>
	* lisp/sawfish/wm/menus.jl: added some missing accelerators in
	window-ops-menu as well as Move and Resize entries, issue reported
	by Fernando Carmona Varo. Also removed tabs in the affected
	defvar.

2008-08-04  Timo Korvola <tkorvola@svn.gnome.org>
	* src/windows.c, src/sawmill_subrs.h, man/sawmill.texi: Rename
	window-prop-del to window-remprop.

2008-08-04  Christopher Bratusek <nano-master@gmx.de>
	* Makefile.in
	* sawfish.spec.in: Sawfish.desktop is now sawfish.desktop

	* po/sawfish.pot
	* po/*.po: updated the pot file and all po files
		- removed deprecated strings
		- removed executable bits from po files

2008-08-04  Janek Kozicki <cosurgi@gmail.com>
	* mark all subdir */Changelog as deprecated

	* lisp/sawfish/wm/focus.jl: add Enter-Click Focus Mode by
	Dagfinn I. Mannsåke (Original Author), Christopher Bratusek
	and Timo Korvola (Simplyfied Code)
