@@ -1,3 +1,11 @@
+2008-08-29  Janek Kozicki <cosurgi@gmail.com>
+	* lisp/sawfish/wm/commands/grow-pack.jl
+	* lisp/sawfish/wm/stacking.jl
+	* lisp/sawfish/wm/util/rects.jl: Add stacking visibility patch by Timo
+	Korvola. This fixes raise-lower window problems with xcomposite
+	extension.
+
+
 2008-08-07  Christopher Bratusek <nano-master@gmx.de>
 	* themes/Makefile.in: install Elberg-tabbed 
 
